[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Etc/Ball.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Particles/FireBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Weapons/EnemyExplosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Weapons/StationaryFire.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/EnemyScripts/EnemyBullet.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="FireShortBlob" type="Area2D"]
pause_mode = 1
script = ExtResource( 5 )
atk = 40.0
speedFalloff = true
falloffAmt = 0.5
spdSlow = 2500.0
spdFast = 2501.0
speedupRate = 75.0
slowdownRate = 0.001
scaledRate = 1.75
scaledRate2 = 2.5
hitString = "Player"
spawnsObj = true
objToSpawn = ExtResource( 3 )
spawnsSecondObj = true
secondObj = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.5, 0.8 )

[node name="FireBall" parent="." instance=ExtResource( 2 )]
amount = 30
explosiveness = 0.1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DisableTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bullet_body_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_DisableTimer_timeout"]
